--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>A heading 1</h1>
+        <h1>A heading 1 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  hi
+            <br> & nbsb ; = non breaking space</h1>
+        <br><br>
         <h2>A heading 2</h2>
-        <p>A paragraph. </p>
+        <h3>A heading 3</h3>
+        <h4> and another</h4>
+        <h5> and another</h5>
+        <h6> ANNNDDDD ANOTHER</h6>
+        <h7> anddddddddd yet another</h7>
+        <hr><br><hr>
+        <p>A paragraph.</p>
     </body>
-    </html>
+</html>
