--- a/index.html
+++ b/index.html
@@ -6,16 +6,64 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>A heading 1 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  hi
-            <br> & nbsb ; = non breaking space</h1>
-        <br><br>
+        <h1>Heading 1</h1>
         <h2>A heading 2</h2>
+        <br>
+        <blockquote>
+            This is indented text in a blockquote
+        </blockquote>
+        <br>
+        <b>This text is bold</b>
+        <br><br>
+        <strong>This text is strong but its the same as bold</strong>After you close the code it will continue back in unbolded text. 
+        <br>
+        <br>
+        If you choose you can <b>bold</b> a certain word or text for extra attention
+        <br><br>
+        <i> and you can make it sideways too </i>
+        <br><br>
+        <i><b>You can do bold AND sideways at the same time</b></i>
+        <br><br>
+        You can also <mark>mark</mark> a certain word as well.
+        <br><br>
+        <i><b><mark>You can do everything at once as well</mark></b></i>
+        <br><br>
+        This is<sup>supertext</sup>
+        <br><br>
+        This is <sub>sub text</sub>
+        <br><br>
+        <ol>
+            <li>List item 1</li>
+            <li>List item 2</li>
+            <li>List item 2</li>
+        </ol>
+        <br>
+        <ul>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+        </ul>
         <h3>A heading 3</h3>
-        <h4> and another</h4>
-        <h5> and another</h5>
-        <h6> ANNNDDDD ANOTHER</h6>
-        <h7> anddddddddd yet another</h7>
-        <hr><br><hr>
-        <p>A paragraph.</p>
+        <h4>A heading 4</h4>
+        <h5>A heading 5</h5>
+        <h6>A heading 6</h6>
+        <h7>A heading 7</h7>
+            <p>A paragraph.</p>
+            <p>Another new paragraph</p>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
