added some stuff

--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
             <li>List item 1</li>
             <li>List item 2</li>
             <li>List item 2</li>
+            <li>&copy;Time Magazine</li>
+            <li>5 &gt; 4</li>
+            <li>5 &lt; 6</li>
+            <li> 5 &amp; 6</li>
         </ol>
         <br>
         <ul>
             <li>List item</li>
-            <li>List item</li>
-            <li>List item</li>
+            <li><i>List item</i></li>
+            <li><b>List item</b></li>
+            <li><b><i> Double trouble</i></b></li>
         </ul>
         <h3>A heading 3</h3>
         <h4>A heading 4</h4>
